Header overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   right: 0;
   top: 0;
   box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.26);
+  z-index: 1;
 }
 
 .main__header span {
